# uroborosql-fmt

./: .gitignore  .release-please-manifest.json  .uroborosqlfmtrc.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.sh  config.js  debug.txt  err.txt  index.html  ja.html  out.sql  out.txt  package-lock.json  package.json  release-please-config.json  release-plz.toml  style.css  test.sql  test3.sql  uroborosql-fmt.js  uroborosql-fmt.wasm  uroborosql_fmt_wasm.js  uroborosql_fmt_wasm_bg.wasm  uroborosqlfmt-config.json
crates/uroborosql-fmt/: CHANGELOG.md  Cargo.toml
crates/uroborosql-fmt-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/uroborosql-fmt-cli/src/: cli.rs  main.rs
crates/uroborosql-fmt-cli/tests/: cli.rs  cli_ext.rs
crates/uroborosql-fmt-napi/: CHANGELOG.md  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  run.js  test.sql
crates/uroborosql-fmt-napi/__test__/: index.spec.mjs
crates/uroborosql-fmt-napi/npm/darwin-x64/: README.md  package.json
crates/uroborosql-fmt-napi/npm/linux-x64-gnu/: README.md  package.json
crates/uroborosql-fmt-napi/npm/win32-x64-msvc/: README.md  package.json
crates/uroborosql-fmt-napi/src/: lib.rs
crates/uroborosql-fmt-wasm/: CHANGELOG.md  Cargo.toml
crates/uroborosql-fmt-wasm-cabi/: Cargo.toml  README.md
crates/uroborosql-fmt-wasm-cabi/src/: lib.rs
crates/uroborosql-fmt-wasm/src/: lib.rs  lsp.rs
crates/uroborosql-fmt/src/: config.rs  cst.rs  error.rs  lib.rs  new_visitor.rs  pg_validate.rs  re.rs  two_way_sql.rs  util.rs  validate.rs  visitor.rs
crates/uroborosql-fmt/src/cst/: body.rs  clause.rs  expr.rs  expr_list.rs  statement.rs
crates/uroborosql-fmt/src/cst/body/: from_list.rs  insert.rs  pg_insert.rs  select.rs  separated_lines.rs  separeted_lines.rs  single_line.rs  values.rs  with.rs
crates/uroborosql-fmt/src/cst/expr/: aligned.rs  array_expr.rs  column_list.rs  cond.rs  conflict_target.rs  expr_seq.rs  function.rs  function_table.rs  joined_table.rs  paren.rs  primary.rs  subquery.rs  table_function_alias.rs  type_cast.rs  unary.rs
crates/uroborosql-fmt/src/new_visitor/: clause.rs  expr.rs  pg_expr.rs  statement.rs
crates/uroborosql-fmt/src/new_visitor/clause/: for_locking.rs  for_update.rs  frame.rs  from.rs  group.rs  group_by.rs  (+14 more)
crates/uroborosql-fmt/src/two_way_sql/: merge.rs  tree.rs
crates/uroborosql-fmt/src/visitor/: clause.rs  expr.rs  pg_expr.rs  statement.rs
crates/uroborosql-fmt/test_normal_cases/: use_new_parser.json
crates/uroborosql-fmt/test_normal_cases/dst/: 002_select_semicolon.sql  003_multiple_select.sql  005_comment_select_semicolon.sql  006_c_s_c.sql  007_select_asterisk.sql  008_select_1.sql  009_select_columnref_simple_ident.sql  010_const.sql  011_multiple_target_element.sql  012_trailing_comment.sql  013_complement_alias.sql  014_indirection.sql  015_sql_id_and_comment.sql  016_bind_param_target_list.sql  017_from_clause.sql  018_from_clause_comment.sql  019_unary_expr.sql  020_binary_arith_expr.sql  021_binary_comp_expr.sql  022_paren_c_expr.sql  023_comp_is.sql  024_comp_in.sql  025_and_or.sql  026_func_expr.sql  027_cast_func.sql  028_where_clause.sql  029_select_comment.sql  030_in_expr_comments.sql  031_bind_param.sql  032_col_list_comment.sql  033_like.sql  034_null_type_cast.sql  035_all_distinct.sql  036_case_expr.sql  037_between.sql  038_set_operations.sql  039_subquery_expression.sql  041_nested_select_subquery.sql  042_nested_select_subquery_comments.sql  043_subquery_as_table.sql  (+75 more)
crates/uroborosql-fmt/test_normal_cases/src/: 001_select.sql  003_multiple_select.sql  010_const.sql  011_multiple_target_element.sql  012_trailing_comment.sql  013_complement_alias.sql  014_indirection.sql  015_sql_id_and_comment.sql  016_bind_param_target_list.sql  017_from_clause.sql  018_from_clause_comment.sql  019_unary_expr.sql  020_binary_arith_expr.sql  021_binary_comp_expr.sql  022_paren_c_expr.sql  023_comp_is.sql  024_comp_in.sql  025_and_or.sql  026_func_expr.sql  027_cast_func.sql  028_where_clause.sql  029_select_comment.sql  030_in_expr_comments.sql  031_bind_param.sql  032_col_list_comment.sql  033_like.sql  034_null_type_cast.sql  035_all_distinct.sql  036_case_expr.sql  037_between.sql  038_set_operations.sql  039_subquery_expression.sql  040_subquery_expression_comments.sql  041_nested_select_subquery.sql  042_nested_select_subquery_comments.sql  043_subquery_as_table.sql  044_subquery_as_table_aliased.sql  045_in_subquery.sql  046_exists_subquery.sql  047_all_some_any_subquery.sql  (+74 more)
crates/uroborosql-fmt/testfiles/: readme.md
crates/uroborosql-fmt/tests/: README.md  coverage.rs  normal_cases.rs  pgcst_coverage.rs  pgcst_normal_cases.rs  pgcst_util.rs  test_all.rs
crates/uroborosql-language-server/: CHANGELOG.md  Cargo.toml  README.md
crates/uroborosql-language-server/docs/: protocol.md
crates/uroborosql-language-server/src/: code_action.rs  configuration.rs  document.rs  formatting.rs  lib.rs  lint.rs  main.rs  paths.rs  server.rs  text.rs
crates/uroborosql-language-server/src/code_action/: directive_line.rs  disable_next_line.rs  remove_unknown_rule.rs
crates/uroborosql-language-server/tests/: code_action.rs  diagnostics.rs  formatting.rs  lifecycle.rs  lsp_flow.rs  test_harness.rs  utf16.rs
crates/uroborosql-lint/: CHANGELOG.md  Cargo.toml  README.md
crates/uroborosql-lint-cli/: Cargo.toml  README.md
crates/uroborosql-lint-cli/src/: app.rs  args.rs  main.rs
crates/uroborosql-lint-cli/tests/: cli.rs  integration_test.rs
crates/uroborosql-lint/src/: config.rs  context.rs  diagnostic.rs  directive.rs  lib.rs  linter.rs  rule.rs  rules.rs  tree.rs
crates/uroborosql-lint/src/config/: README.md  config_object.rs  config_store.rs  lint_config.rs  loader.rs  overrides.rs  store.rs  structure.rs  types.rs
crates/uroborosql-lint/src/rules/: missing_two_way_sample.rs  no_distinct.rs  no_function_in_join_or_where.rs  no_function_on_column_in_join_or_where.rs  no_not_in.rs  no_union_distinct.rs  no_wildcard_projection.rs  too_large_in_list.rs
crates/uroborosql-lint/tests/: config_store.rs  config_test.rs
(+675 files in other folders)
