[workspace]
members = [
    "crates/uroborosql-fmt",
    "crates/uroborosql-fmt-cli",
    "crates/uroborosql-fmt-napi",
    "crates/uroborosql-fmt-wasm",
    "crates/uroborosql-lint",
    "crates/uroborosql-lint-cli",
    "crates/uroborosql-language-server"
]
resolver = "2"

[workspace.package]
authors = ["Future Corporation"]
edition = "2021"
license = "BUSL-1.1"
repository = "https://github.com/future-architect/uroborosql-fmt"

[workspace.dependencies]
# Internal crates
uroborosql-fmt = { path = "./crates/uroborosql-fmt", version = "1.0.1" }
uroborosql-lint = { path = "./crates/uroborosql-lint" }
uroborosql-language-server = { path = "./crates/uroborosql-language-server" }

# On Windows, this git dependency may require `git config --global core.longpaths true`.
postgresql-cst-parser = { git = "https://github.com/future-architect/postgresql-cst-parser", branch = "feat/new-apis-for-linter", version = "0.2" }

clap = { version = "4", features = ["derive"] }

[profile.release]
lto = true
