[package]
name = "uroborosql-fmt-cli"
version = "1.0.0"
description = "Crate to run uroborosql-fmt on the CLI"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uroborosql-fmt = { workspace = true }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
