[package]
edition = "2021"
name = "uroborosql-fmt-napi"
version = "1.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
uroborosql-fmt = { workspace = true }

[build-dependencies]
napi-build = "2.0.1"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(napi)'] }
