[package]
name = "uroborosql-fmt-wasm"
version = "1.0.0"
description = "Crate to build uroborosql-fmt wasm"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
lsp-server = [
    "futures",
    "js-sys",
    "wasm-bindgen-futures",
    "wasm-streams",
    "web-sys",
    "uroborosql-language-server",
]

[dependencies]
wasm-bindgen = "0.2.84"
futures = { version = "0.3", optional = true, default-features = false, features = ["alloc"] }
js-sys = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true, features = ["futures-core-03-stream"] }
wasm-streams = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console", "WritableStream"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

uroborosql-fmt = { workspace = true }
uroborosql-language-server = { path = "../uroborosql-language-server", default-features = false, features = ["runtime-agnostic"], optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
