[package]
name = "uroborosql-fmt"
version = "0.1.0"
description = "The core of uroborosql-fmt"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
annotate-snippets = "0.9.1"
indexmap = "1.9.3"
itertools = "0.10.3"
once_cell = "1.17.0"
regex = "1.10.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
tree-sitter = "~0.20.3"

# git config --global core.longpaths true を管理者権限で実行しないといけない
tree-sitter-sql = { git = "https://github.com/future-architect/tree-sitter-sql" }

postgresql-cst-parser = {git = "https://github.com/future-architect/postgresql-cst-parser"}
