[package]
name = "uroborosql-fmt"
version = "0.1.0"
description = "The core of uroborosql-fmt"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
annotate-snippets = "0.9.1"
indexmap = "1.9.3"
itertools = "0.10.3"
once_cell = "1.17.0"
regex = "1.11.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"

# git config --global core.longpaths true を管理者権限で実行しないとけない
postgresql-cst-parser = { git = "https://github.com/future-architect/postgresql-cst-parser" }

[dev-dependencies]
console = "0.15.10"
similar = { version = "2.7.0", features = ["unicode", "inline"] }
walkdir = "2.5.0"
