[package]
name = "uroborosql-language-server"
version = "0.1.0"
edition = "2024"

[features]
default = ["runtime-tokio"]
# for native desktop (use Tokio runtime)
runtime-tokio = ["tokio", "tower-lsp-server/runtime-tokio"]
# for WASM/browser (runtime-agnostic, no Tokio)
runtime-agnostic = ["tower-lsp-server/runtime-agnostic"]

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "time"], optional = true }
tower-lsp-server = { version = "0.22.1", default-features = false }
ropey = "1.6.1"
uroborosql-fmt = { path = "../uroborosql-fmt" }
uroborosql-lint = { path = "../uroborosql-lint" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
