[package]
name = "uroborosql-language-server"
version.workspace = true
edition = "2024"

[[bin]]
name = "uroborosql-language-server"
path = "src/main.rs"

[features]
default = ["runtime-tokio"]
runtime-tokio = ["tokio", "tower-lsp-server/runtime-tokio"]

[dependencies]
clap = { workspace = true }
ropey = "1.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "time"], optional = true }
tower-lsp-server = { version = "0.22.1", default-features = false }
uroborosql-fmt = { workspace = true }
uroborosql-lint = { workspace = true }
