[package]
name = "uroborosql-lint-cli"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "uroborosql-lint"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
uroborosql-lint = { path = "../uroborosql-lint" }

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
tempfile = "3"
